# Hermes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  _2home_2runner_2work_2_hermes_2_hermes_2include_2_hermes_2_socket_2_listener_socket_8hpp-example.html  _2home_2runner_2work_2_hermes_2_hermes_2include_2_hermes_2_socket_2_sync_2_listener_socket_8hpp-example.html  __base_8hpp.html  __base_8hpp.js  __base_8hpp__dep__incl.map  __base_8hpp__dep__incl.md5  __base_8hpp__incl.map  __base_8hpp__incl.md5  __base_8hpp_source.html  __pch_8hpp.html  __pch_8hpp__dep__incl.dot  _accept_security_context_flags_8hpp.html  _accept_security_context_flags_8hpp.js  _accept_security_context_flags_8hpp__dep__incl.map  _accept_security_context_flags_8hpp__dep__incl.md5  _accept_security_context_flags_8hpp__incl.map  _accept_security_context_flags_8hpp__incl.md5  _accept_security_context_flags_8hpp_source.html  _accept_security_context_return_flags_8hpp.html  _accept_security_context_return_flags_8hpp.js  _accept_security_context_return_flags_8hpp__dep__incl.map  _accept_security_context_return_flags_8hpp__dep__incl.md5  _accept_security_context_return_flags_8hpp__incl.map  _accept_security_context_return_flags_8hpp__incl.md5  _accept_security_context_return_flags_8hpp_source.html  _accepted_ranges_8hpp__dep__incl.dot  _accepted_ranges_8hpp_source.html  _address_family_enum_8hpp.html  _address_family_enum_8hpp.js  _address_family_enum_8hpp__dep__incl.map  _address_family_enum_8hpp__dep__incl.md5  _address_family_enum_8hpp__incl.map  _address_family_enum_8hpp__incl.md5  _address_family_enum_8hpp_source.html  _async_client_socket_8hpp.html  (+1399 more)
cmake/: HermesConfig.cmake.in
docs/doxygen/: Doxyfile
docs/doxygen/docs/: recv_stream_behaviour.md
docs/doxygen/doxygen-custom/: header.html
docs/html/: __base_8hpp.html  __base_8hpp.js  __base_8hpp__dep__incl.dot  __base_8hpp__incl.dot  __base_8hpp_source.html  __pch_8hpp__incl.dot  __pch_8hpp_source.html  _accepted_ranges_8hpp.html  _accepted_ranges_8hpp.js  _accepted_ranges_8hpp__incl.dot  _auth_credentials_8hpp.html  _auth_credentials_8hpp.js  _auth_credentials_8hpp__incl.dot  _cache_control_8hpp.html  _cache_control_8hpp.js  _cache_control_8hpp__dep__incl.dot  _client_8hpp.html  _client_8hpp__incl.dot  _connect_method_8hpp.html  _connection_enum_8hpp.js  _connection_enum_8hpp__dep__incl.dot  _content_encoding_enum_8hpp.js  _content_encoding_enum_8hpp__dep__incl.dot  _content_encoding_enum_8hpp__incl.dot  _content_encoding_enum_8hpp_source.html  _cow_8hpp.js  _cow_8hpp_source.html  _delete_method_8hpp.html  _delete_method_8hpp_source.html  _entity_tag_8hpp__incl.dot  _entity_tag_8hpp_source.html  _env_8hpp__incl.dot  _file_output_range_8hpp.html  _functional_8hpp.html  _functional_8hpp__incl.dot  _get_method_8hpp.html  _get_method_8hpp_source.html  _hash_8hpp.html  _hash_8hpp.js  _hash_8hpp_source.html  (+325 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_13.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_2.js  enumvalues_3.js  (+60 more)
examples/: BasicClient.cpp  BasicServer.cpp  CMakeLists.txt  fujIServer.cpp  main.cpp
examples/Client/: AsyncCoro.cpp  AsyncExec.cpp  Basic.cpp  Range.cpp  _base.hpp  main.cpp
examples/Server/: AsyncServer.cpp  BasicServer.cpp  fujIServer.cpp  performance_debug.py
images/: Hermes-logo.ai
include/Hermes/Endpoint/IpEndpoint/: IpAddress.hpp  IpAddress.tpp  IpEndpoint.hpp  IpEndpoint.tpp
include/Hermes/Endpoint/_base/: EndpointConcept.hpp
include/Hermes/Socket/: ClientSocket.hpp  ClientSocket.tpp  ListenerSocket.hpp  ListenerSocket.tpp  ServerSocket.hpp  _base.hpp
include/Hermes/Socket/Async/: AsyncClientSocket.hpp  AsyncClientSocket.tpp  AsyncListenerSocket.hpp  AsyncListenerSocket.tpp  AsyncServerSocket.hpp  AsyncServerSocket.tpp
include/Hermes/Socket/Data/: DefaultSocketData.hpp  DefaultSocketData.tpp  TlsSocketData.hpp  TlsSocketData.tpp
include/Hermes/Socket/Sync/: ClientSocket.hpp  ClientSocket.tpp  ListenerSocket.hpp  ListenerSocket.tpp  ServerSocket.hpp  ServerSocket.tpp
include/Hermes/Socket/Tcp/: TcpClientSocket.hpp  TcpListenerSocket.hpp
include/Hermes/Socket/_base/: DefaultConnectPolicy.hpp  DefaultConnectPolicy.tpp  DefaultSocketData.hpp  DefaultTransferPolicy.hpp  DefaultTransferPolicy.tpp  DgramSocket.hpp  RawInputSocketRange.hpp  RawInputSocketRange.tpp  RawInputSocketView.hpp  RawInputSocketView.tpp  RawOutputSocketRange.hpp  (+5 more)
include/Hermes/Utils/: DropLast.hpp  DropLast.tpp  Hash.hpp  Overloads.hpp  ToBytes.hpp  UntilMatch.hpp  UntilMatch.tpp
include/Hermes/_base/: ConnectionErrorEnum.hpp  ConnectionErrorEnum.tpp  Credentials.hpp  MySTD.hpp  MyStd.hpp  Network.hpp  ProtocolConnectionConcept.hpp  WinAPI.hpp  WinApi.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  concepts_0.js  concepts_1.js  concepts_2.js  (+112 more)
src/Hermes/_base/: ConnectionErrorEnum.cpp  Credentials.cpp  Network.cpp
tests/: BaseTests.hpp  CMakeLists.txt  DefaultSocketTests.cpp  IpAddressTests.cpp  IpEndpointTests.cpp  IpTests.cpp  IpTests.hpp  TcpTests.cpp  TcpTests.hpp  TlsSocketTests.cpp  UtilsTests.cpp  _base.hpp  _tests.cpp  main.cpp
tests/Endpoint/: IpAddressTests.cpp  IpEndpointTests.cpp
tests/Socket/: AsyncSocketTests.cpp  DefaultSocketTests.cpp  TlsSocketTests.cpp
tests/Utils/: DropLastTests.cpp  UntilMatchTests.cpp
(+106 files in other folders)
